🔨 Fix link bottom spacing in style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -126,7 +126,11 @@ $color-purple: #AB47BC;
 
   &:hover {
     padding: .55em 1.05em;
-    bottom: 8.95em;
+    bottom: 5.7em;
+
+    @media screen and (min-height: 400px) {
+      bottom: 9.95em;
+    }
 
     #div-insta {
       text-shadow: -1px 2px $color-drop,
@@ -150,7 +154,11 @@ $color-purple: #AB47BC;
 
   &:hover {
     padding: .55em 1.05em;
-    bottom: 4.95em;
+    bottom: 2.95em;
+
+    @media screen and (min-height: 400px) {
+      bottom: 6.7em;
+    }
 
     #div-github {
       text-shadow: -1px 2px $color-drop,
@@ -174,7 +182,11 @@ $color-purple: #AB47BC;
 
   &:hover {
     padding: .55em 1.05em;
-    bottom: .95em;
+    bottom: .2em;
+
+    @media screen and (min-height: 400px) {
+      bottom: 3.45em;
+    }
 
     #div-email {
       text-shadow: -1px 2px $color-drop,
